# ca_ai

./: .gitignore  ENGINEER_TDR.md  LICENSE  README.md
.github/workflows/: ci.yml
backend/: .env.example  __init__.py  main.py  pyproject.toml  requirements.txt
backend/api/: documents.py  llm.py  privacy.py  routes.py  workspace.py
backend/core/: __init__.py  firewall.py  privacy.py  tools.py  workspace.py
backend/database/: __init__.py  backup.py  connection.py  schema.sql
backend/database/migrations/: 001_initial_schema.sql  002_qa_tracking.sql  003_conversations.sql  migration_manager.py
backend/rules/: __init__.py  engine.py  itc_evaluation.py  reconciliation.py
backend/services/: __init__.py  cache.py  chunking.py  classification.py  context_packer.py  conversation.py  embedding.py  entity_extraction.py  indexing.py  llm.py  ocr.py  parser.py  qa_tracking.py  queue.py  search.py
docs/intro/: APP.md  ca-ai-mvp-architecture.md  context-firewall-impl.md  mvp-roadmap-vectorization.md  quick-reference-guide.md
frontend/: .env.example  .yarnrc  index.html  package.json
frontend/src/: App.css  App.tsx  hero.ts  main.tsx
frontend/src-tauri/: tauri.conf.json
frontend/src/components/: Button.tsx  Navigation.tsx  index.ts
frontend/src/hooks/: useWorkspace.ts
frontend/src/pages/: Chat.tsx  Clients.tsx  Dashboard.tsx  Documents.tsx  GSTFiling.tsx  Privacy.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/store/: workspace.ts
frontend/src/types/: index.ts
server/: __init__.py  main.py  pyproject.toml  requirements.txt
server/api/: __init__.py  rules.py  versions.py
server/database/: __init__.py  connection.py  init.py  schema.sql
server/scripts/: __init__.py  populate_rules.py
server/services/: __init__.py  embedding.py  rules_data.py  rules_populator.py  sync.py
shared/: package.json
shared/src/: index.ts
shared/src/types/: api.ts  client.ts  document.ts
