[project]
name = "ca-ai-backend"
version = "0.1.0"
description = "CA AI MVP Backend - Local Processing Engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.19.0",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "services", "rules", "api"]

