[project]
name = "ca-ai-server"
version = "0.1.0"
description = "CA AI MVP Rules Server - PostgreSQL + FastAPI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

